se agregan todas las clases necesarias para seguridad, bd y swagger
se agregan todas las clases necesarias para seguridad y bd
